--- a/styles/component/Navbar.module.scss
+++ b/styles/component/Navbar.module.scss
@@ -40,3 +40,27 @@
     padding-left: 15px;
   }
 }
+
+.navArea {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  @media screen and (max-width: 480px) {
+    display: none;
+  }
+}
+
+.navItems {
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+  @media screen and (max-width: 480px) {
+    font-size: 1rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
