--- a/styles/component/Navbar.module.scss
+++ b/styles/component/Navbar.module.scss
@@ -30,7 +30,7 @@
 }
 
 .navBrand {
-    font-family: 'Futura', serif;
+  font-family: "Futura", serif;
   font-size: 1.5rem;
   margin: 0;
   padding-left: 25px;
@@ -62,5 +62,35 @@
     font-size: 1rem;
     margin-left: 0;
     margin-right: 0;
+  }
+}
+
+.navLink {
+  text-decoration: none;
+  color: #000;
+  padding: 0.5em;
+  border-radius: 0.3em;
+  &:hover {
+    background: #000;
+    color: #fff;
+  }
+  @media screen and (max-width: 480px) {
+    padding: 0.5em;
+    border-radius: 0.3em;
+  }
+}
+
+.navForienLink {
+  text-decoration: none;
+  color: #000;
+  padding: 0.5em;
+  border-radius: 0.3em;
+  &:hover {
+    background: #000;
+    color: #fff;
+  }
+  @media screen and (max-width: 480px) {
+    padding: 0.5em;
+    border-radius: 0.3em;
   }
 }
