--- a/styles/component/Card.module.scss
+++ b/styles/component/Card.module.scss
@@ -17,6 +17,36 @@
   }
 }
 
+.workCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  word-wrap: break-word;
+  background-clip: border-box;
+  background: white;
+  border-radius: 20px;
+  padding: 1.9rem 1.9rem;
+  padding-top: 0.2rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.06);
+  transition: 0.3s;
+  &:hover {
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  }
+  min-height: 400px;
+  max-height: 400px;
+  min-width: 250px;
+  max-width: 250px;
+  margin-right: 1rem;
+  margin-left: 1rem;
+
+  @media (max-width: 480px) {
+    margin-right: 0.7rem;
+    margin-left: 0.7rem;
+  }
+}
+
 .cardSquare {
   display: flex;
   align-items: center;
