--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -1,5 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
 
+// Variables
+$font-main: 'Quicksand', sans-serif;
+$color-main: #333;
+$color-black: #000;
+$color-gray: #d8d8d8;
+$standard-margin: 20px;
+
+@mixin link-style {
+  text-decoration: none;
+  color: $color-black;
+  padding: 0.5em;
+  border-radius: 0.3em;
+
+  &:hover {
+    background: $color-gray;
+    border-radius: 25px;
+  }
+  
+  @media screen and (max-width: 480px) {
+    padding: 0.5em;
+    border-radius: 0.3em;
+  }
+}
 
 .navbar {
   z-index: 100;
@@ -9,10 +32,13 @@
   justify-content: space-between;
   background: white;
   filter: drop-shadow(0px 0px 1px rgb(184, 184, 184));
-  width: 100%;
-  min-height: 60px;
-  margin: 0;
+  width: 84%;
+  margin: $standard-margin 8%;
+  min-height: 65px;
+  border-radius: 30px;
   top: 0;
+  padding: 0 10px;
+
   @media screen and (max-width: 480px) {
     height: 60px;
   }
@@ -24,20 +50,21 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  color: #333;
+  color: $color-main;
 
   &:visited {
     text-decoration: none;
-    color: #333;
+    color: $color-main;
   }
 }
 
 .navBrand {
-  font-family: 'Quicksand', sans-serif;
+  font-family: $font-main;
   font-size: 1.5rem;
   letter-spacing: 1.5pt;
   margin: 0;
   padding-left: 25px;
+
   @media screen and (max-width: 480px) {
     height: 60px;
     line-height: 60px;
@@ -46,56 +73,34 @@
 }
 
 .navArea {
-  margin: 20px;
+  margin: $standard-margin;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
+
   @media screen and (max-width: 715px) {
     display: none;
   }
 }
 
 .navItems {
-  font-family: 'Quicksand', sans-serif;
+  font-family: $font-main;
   font-weight: bold;
   font-size: 1.1rem;
   text-align: center;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
+  margin: 0 0.5em;
+
   @media screen and (max-width: 480px) {
     font-size: 1rem;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0;
   }
 }
 
 .navLink {
-  text-decoration: none;
-  color: #000;
-  padding: 0.5em;
-  border-radius: 0.3em;
-  &:hover {
-    background: #000;
-    color: #fff;
-  }
-  @media screen and (max-width: 480px) {
-    padding: 0.5em;
-    border-radius: 0.3em;
-  }
+  @include link-style;
 }
 
 .navForienLink {
-  text-decoration: none;
-  color: #000;
-  padding: 0.5em;
-  border-radius: 0.3em;
-  &:hover {
-    background: #000;
-    color: #fff;
-  }
-  @media screen and (max-width: 480px) {
-    padding: 0.5em;
-    border-radius: 0.3em;
-  }
+  @include link-style;
 }
