--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -12,10 +12,10 @@ $standard-margin: 20px;
   color: $color-black;
   padding: 0.5em;
   border-radius: 0.3em;
+  transition: background-color 0.5s ease-in-out;
 
   &:hover {
-    background: $color-gray;
-    border-radius: 25px;
+    color: #2b26be;
   }
   
   @media screen and (max-width: 480px) {
