--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -32,8 +32,9 @@ $standard-margin: 20px;
   justify-content: space-between;
   background: white;
   filter: drop-shadow(0px 0px 1px rgb(184, 184, 184));
-  width: 84%;
-  margin: $standard-margin 8%;
+  width: 100%;
+  margin-top: $standard-margin;
+  margin-bottom: $standard-margin;
   min-height: 65px;
   border-radius: 30px;
   top: 0;
