--- a/src/components/TopPopup.module.scss
+++ b/src/components/TopPopup.module.scss
@@ -6,7 +6,7 @@
     background: #ff4b4b;
     color: white;
     font-size: 0.8em;
-    
+    min-height: 30px;
     p {
       padding-right: 10px;
       padding-left: 10px;
