--- a/src/sections/ProfileCard.module.scss
+++ b/src/sections/ProfileCard.module.scss
@@ -1,8 +1,13 @@
 .profileCard {
-    width: 500px;
+    width: 100%;
     height: 300px;
     border-radius: 30px;
     background: white;
     filter: drop-shadow(0px 0px 1px rgb(184, 184, 184));
     padding: 2em;
+}
+
+.profileName {
+    font-weight: bold;
+    font-size: 2rem;
 }
