--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
+@use "./mixins.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap");
 
 // Variables
-$font-main: 'Quicksand', sans-serif;
+$font-main: "Quicksand", sans-serif;
 $color-main: #333;
 $color-black: #000;
 $color-gray: #d8d8d8;
@@ -17,7 +19,7 @@ $standard-margin: 20px;
   &:hover {
     color: #2b26be;
   }
-  
+
   @media screen and (max-width: 480px) {
     padding: 0.5em;
     border-radius: 0.3em;
@@ -30,8 +32,6 @@ $standard-margin: 20px;
   align-items: center;
   align-content: center;
   justify-content: space-between;
-  background: white;
-  filter: drop-shadow(0px 0px 1px rgb(184, 184, 184));
   width: 100%;
   margin-top: $standard-margin;
   margin-bottom: $standard-margin;
@@ -39,6 +39,8 @@ $standard-margin: 20px;
   border-radius: 30px;
   top: 0;
   padding: 0 10px;
+
+  @include mixins.light-glass-bg;
 
   @media screen and (max-width: 480px) {
     height: 60px;
