--- a/src/sections/ProfileCard.module.scss
+++ b/src/sections/ProfileCard.module.scss
@@ -1,13 +1,15 @@
+@use "../components/mixins.scss";
+
 .profileCard {
-    width: 100%;
-    height: 300px;
-    border-radius: 30px;
-    background: white;
-    filter: drop-shadow(0px 0px 1px rgb(184, 184, 184));
-    padding: 2em;
+  width: 100%;
+  height: 300px;
+  border-radius: 30px;
+  padding: 2em;
+
+  @include mixins.light-glass-bg;
 }
 
 .profileName {
-    font-weight: bold;
-    font-size: 2rem;
+  font-weight: bold;
+  font-size: 2rem;
 }
