--- a/src/sections/ProfileCard.module.scss
+++ b/src/sections/ProfileCard.module.scss
@@ -1,6 +1,8 @@
 @use "../components/mixins.scss";
 
 .profileCard {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 300px;
   border-radius: 30px;
@@ -12,4 +14,10 @@
 .profileName {
   font-weight: bold;
   font-size: 2rem;
+}
+
+.profileImage {
+  border-radius: 50%;
+  height: 50%;
+  max-height: 200px;
 }
