--- a/src/components/Typography.module.scss
+++ b/src/components/Typography.module.scss
@@ -1,54 +1,26 @@
-.textAlignment {
-    text-align: center;
-  }
-  
-  .headingBase {
-    margin: 0;
-    margin-top: 0.5em;
-    margin-bottom: 1em;
-  }
-  
-  .heading {
-    @extend .textAlignment;
-    display: flex;
-    background-clip: border-box;
-    background: white;
-    height: 450px;
+.heading {
+  text-align: center;
+  display: flex;
+  background-clip: border-box;
+  background: white;
+  height: 450px;
+  width: 100%;
+  overflow: hidden;
+
+  @media screen and (max-width: 480px) {
+    height: 300px;
     width: 100%;
-    overflow: hidden;
-  
-    @media screen and (max-width: 480px) {
-      height: 300px;
-      width: 100%;
+  }
+}
+
+@for $i from 1 through 5 {
+  .heading#{$i} {
+    font-size: (4 - $i * 0.6) + rem;
+
+    @if $i == 2 {
+      @media screen and (max-width: 480px) {
+        font-size: 2rem;
+      }
     }
   }
-  
-  .heading1 {
-    @extend .headingBase;
-    font-size: 3.7rem;
-  }
-  
-  .heading2 {
-    @extend .headingBase;
-    font-size: 3.1rem;
-  
-    @media screen and (max-width: 480px) {
-      font-size: 2rem;
-    }
-  }
-  
-  .heading3 {
-    @extend .headingBase;
-    font-size: 2.6rem;
-  }
-  
-  .heading4 {
-    @extend .headingBase;
-    font-size: 2.1rem;
-  }
-  
-  .heading5 {
-    @extend .headingBase;
-    font-size: 1.8rem;
-  }
-  
+}
