--- a/src/components/Typography.module.scss
+++ b/src/components/Typography.module.scss
@@ -6,7 +6,6 @@
   height: 450px;
   width: 100%;
   overflow: hidden;
-
   @media screen and (max-width: 480px) {
     height: 300px;
     width: 100%;
@@ -16,6 +15,8 @@
 @for $i from 1 through 5 {
   .heading#{$i} {
     font-size: (4 - $i * 0.6) + rem;
+    margin-top: 1em;
+    margin-bottom: 0.3em;
 
     @if $i == 2 {
       @media screen and (max-width: 480px) {
