--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+
+// Mixin for the modal overlay style
+@mixin modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(65, 65, 65, 0.75);
+}
+
+// Mixin for the modal position style
+@mixin modal-position {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -28,7 +48,6 @@ body {
   }
 }
 
-
 .ReactModal__Body--open {
   overflow-y: hidden;
 }
@@ -47,31 +66,21 @@ body {
 }
 
 .StoryModal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  @include modal-position;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .StoryModalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(65, 65, 65, 0.75);
+  @include modal-overlay;
 }
 
 .SHModal {
-  position: absolute;
+  @include modal-position;
   top: 40px;
   left: 20%;
   right: 20%;
-  bottom: 0px;
   border: none;
   background: #fff;
   overflow: scroll;
@@ -79,10 +88,7 @@ body {
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
   outline: none;
-  padding: 20px;
-  padding-top: 30px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 30px 60px 20px;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
   &::-webkit-scrollbar {
@@ -92,9 +98,7 @@ body {
   @media screen and (max-width: 1100px) {
     left: 10%;
     right: 10%;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
   }
 
   @media screen and (max-width: 480px) {
@@ -107,10 +111,5 @@ body {
 }
 
 .SHModalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(65, 65, 65, 0.75);
+  @include modal-overlay;
 }
