--- a/src/components/NModal.module.scss
+++ b/src/components/NModal.module.scss
@@ -1,5 +1,12 @@
 .modalCloseButton {
   // your styles here...
+  background: rgb(174, 174, 174);
+  border-radius: 50%;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .modalText {
