--- a/src/sections/WorkCard.module.scss
+++ b/src/sections/WorkCard.module.scss
@@ -43,6 +43,7 @@ $padding-left-xs: 1em;
   display: flex;
   justify-content: space-around;
   min-width: 340px;
+  max-width: 340px;
   min-height: 420px;
   border-radius: 20px;
   padding: 2em 1.2em;
