--- a/src/app/posts/[slug]/Article.module.scss
+++ b/src/app/posts/[slug]/Article.module.scss
@@ -1,20 +1,29 @@
+@use "../../../components/mixins";
+
 .heading {
   font-size: 2.5rem;
+}
+
+.backButton {
+  background: rgb(223, 223, 223);
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  bottom: 20px;
+  @include mixins.light-glass-bg;
 }
 
 .detail {
   & > h1 {
     font-size: 2.5rem;
-
   }
 
   & > h2 {
-    font-size: 2rem
-
+    font-size: 2rem;
   }
 
   & > h3 {
-    font-size: 1.7rem
+    font-size: 1.7rem;
   }
 
   & > p {
