--- a/src/app/posts/[slug]/Article.module.scss
+++ b/src/app/posts/[slug]/Article.module.scss
@@ -5,6 +5,8 @@
 }
 
 .backButton {
+  margin-top: 1em;
+  margin-bottom: 2em;
   background: rgb(223, 223, 223);
   width: 60px;
   height: 60px;
@@ -19,6 +21,7 @@
   }
 
   & > h2 {
+    margin-top: 1em;
     font-size: 2rem;
   }
 
@@ -29,5 +32,18 @@
   & > p {
     line-height: 1.8;
     letter-spacing: 0.2px;
+    font-size: 1rem;
+    line-height: 1.6rem;
+  }
+
+  & > p {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+
+  & > ul {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    list-style: inside;
   }
 }
