--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -1,15 +1,25 @@
 .container {
-    margin: 0 10em;
+  margin: 0 10em;
 
-    @media screen and (max-width: 1500px) {
-        margin: 0 5em;
-    }
+  @media screen and (max-width: 1500px) {
+    margin: 0 5em;
+  }
 
-    @media screen and (max-width: 1150px) {
-        margin: 0 2em;
-    }
+  @media screen and (max-width: 1150px) {
+    margin: 0 2em;
+  }
 
-    @media screen and (max-width: 600px) {
-        margin: 0 1em;
-    }
+  @media screen and (max-width: 600px) {
+    margin: 0 1em;
+  }
+}
+
+.articleContainer {
+  margin: 0 auto;
+  max-width: 920px;
+
+
+  @media screen and (max-width: 900px) {
+    margin: 20px 20px;
+  }
 }
