--- a/src/app/posts/[slug]/Article.module.scss
+++ b/src/app/posts/[slug]/Article.module.scss
@@ -1,31 +1,44 @@
 @use "../../../components/mixins";
 
 .heading {
+  font-weight: bold;
   font-size: 2.5rem;
+  margin-bottom: 1em;
 }
 
 .backButton {
-  margin-top: 1em;
-  margin-bottom: 2em;
+  position: absolute;
+  top: 40px;
+  left: 50px;
   background: rgb(223, 223, 223);
   width: 60px;
   height: 60px;
   border-radius: 50%;
   bottom: 20px;
   @include mixins.light-glass-bg;
+
+  @media screen and (max-width: 1290px) {
+    left: 10px;
+    bottom: 10px;
+  }
 }
 
 .detail {
   & > h1 {
+    font-weight: bold;
     font-size: 2.5rem;
   }
 
   & > h2 {
+    font-weight: bold;
+
     margin-top: 1em;
     font-size: 2rem;
   }
 
   & > h3 {
+    font-weight: bold;
+
     font-size: 1.7rem;
   }
 
@@ -34,11 +47,9 @@
     letter-spacing: 0.2px;
     font-size: 1rem;
     line-height: 1.6rem;
-  }
 
-  & > p {
     margin-top: 0.5em;
-    margin-bottom: 0.5em;
+    margin-bottom: 2.5em;
   }
 
   & > ul {
