--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -17,8 +17,11 @@
 .articleContainer {
   margin: 0 auto;
   max-width: 920px;
+  margin-top: 40px;
 
-
+  @media screen and (max-width: 1290px) {
+    margin-top: 120px;
+  }
   @media screen and (max-width: 900px) {
     margin: 20px 20px;
   }
