--- a/src/app/posts/[slug]/Article.module.scss
+++ b/src/app/posts/[slug]/Article.module.scss
@@ -1,5 +1,7 @@
 @use "../../../components/mixins";
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+
 .heading {
   font-weight: bold;
   font-size: 2.5rem;
@@ -7,7 +9,7 @@
 }
 
 .backButton {
-  position: absolute;
+  position: fixed;
   top: 40px;
   left: 50px;
   background: rgb(223, 223, 223);
@@ -25,29 +27,31 @@
 
 .detail {
   & > h1 {
+    font-family: "Inter";
     font-weight: bold;
     font-size: 2.5rem;
   }
 
   & > h2 {
+    font-family: "Inter";
     font-weight: bold;
-
     margin-top: 1em;
     font-size: 2rem;
   }
 
   & > h3 {
+    font-family: "Inter";
     font-weight: bold;
-
     font-size: 1.7rem;
   }
 
   & > p {
     line-height: 1.8;
     letter-spacing: 0.2px;
-    font-size: 1rem;
-    line-height: 1.6rem;
-
+    font-family: 'Inter', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.8rem;
     margin-top: 0.5em;
     margin-bottom: 2.5em;
   }
@@ -56,5 +60,9 @@
     margin-top: 1em;
     margin-bottom: 1em;
     list-style: inside;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 1.1rem;
+    line-height: 1.8rem;
   }
 }
