--- a/src/app/posts/[slug]/Article.module.scss
+++ b/src/app/posts/[slug]/Article.module.scss
@@ -1,6 +1,7 @@
 @use "../../../components/mixins";
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
 
 .heading {
   font-weight: bold;
@@ -27,20 +28,20 @@
 
 .detail {
   & > h1 {
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-weight: bold;
     font-size: 2.5rem;
   }
 
   & > h2 {
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-weight: bold;
     margin-top: 1em;
     font-size: 2rem;
   }
 
   & > h3 {
-    font-family: "Inter";
+    font-family: "Inter", sans-serif;
     font-weight: bold;
     font-size: 1.7rem;
   }
@@ -48,7 +49,7 @@
   & > p {
     line-height: 1.8;
     letter-spacing: 0.2px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 1.2rem;
     font-weight: 500;
     line-height: 1.8rem;
@@ -60,7 +61,7 @@
     margin-top: 1em;
     margin-bottom: 1em;
     list-style: inside;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 500;
     font-size: 1.1rem;
     line-height: 1.8rem;
