--- a/src/sections/WorkCard.module.scss
+++ b/src/sections/WorkCard.module.scss
@@ -72,4 +72,12 @@ $padding-left-xs: 1em;
   height: $btn-size;
   border-radius: 50%;
   bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profileButtonIcon {
+  width: $btn-size - 40px;
+  height: $btn-size - 40px;
 }
