fix button event area

--- a/src/app/posts/[slug]/Article.module.scss
+++ b/src/app/posts/[slug]/Article.module.scss
@@ -7,12 +7,46 @@
 $btn-size: 60px;
 
 .articleNav {
-  background: rgb(255, 255, 255);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #f9f9f9;
   height: 70px;
   width: 100%;
   border-radius: 40px;
   margin-top: 10px;
   margin-bottom: 30px;
+}
+
+.articleNavToggle {
+  width: 35px;
+  height: 35px;
+  pointer-events: none;
+}
+
+.navButton {
+  position: fixed;
+  top: 40px;
+  left: 50px;
+  background: rgb(223, 223, 223);
+  width: $btn-size;
+  height: $btn-size;
+  border-radius: 50%;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @include mixins.light-glass-bg;
+
+  @media screen and (max-width: 1290px) {
+    left: 10px;
+    bottom: 10px;
+  }
+}
+
+.navButtonIcon {
+  width: $btn-size - 40px;
+  height: $btn-size - 40px;
 }
 
 .heading {
@@ -41,13 +75,11 @@ $btn-size: 60px;
   }
 }
 
-
-
 .backButtonIcon {
   width: $btn-size - 40px;
   height: $btn-size - 40px;
+  pointer-events: none;
 }
-
 
 .detail {
   & > h1 {
