--- a/src/components/_mixins.scss
+++ b/src/components/_mixins.scss
@@ -5,4 +5,8 @@
   backdrop-filter: blur(7.2px);
   -webkit-backdrop-filter: blur(7.2px);
   border: 1px solid rgba(255, 255, 255, 0.56);
+
+  &:hover {
+    filter: none;
+  }
 }
