remove read more button

--- a/src/sections/WorkCard.module.scss
+++ b/src/sections/WorkCard.module.scss
@@ -9,6 +9,8 @@ $padding-left-xs: 1em;
 
 .workContainer {
   display: flex;
+  flex-direction: row;
+  align-items: center;
   width: 100%;
   overflow-x: scroll;
 }
