--- a/src/sections/WorkCard.module.scss
+++ b/src/sections/WorkCard.module.scss
@@ -43,6 +43,7 @@ $padding-left-xs: 1em;
 
 .workCard {
   display: flex;
+  position: relative;
   justify-content: space-around;
   min-width: 340px;
   max-width: 340px;
@@ -50,6 +51,20 @@ $padding-left-xs: 1em;
   border-radius: 20px;
   padding: 2em 1.2em;
   margin-right: 20px;
+
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    object-fit: cover;
+    width: 70%;
+  }
+
+  .flex-initial {
+    z-index: 1;
+  }
 
   @include mixins.light-glass-bg;
 }
