--- a/src/sections/WorkCard.module.scss
+++ b/src/sections/WorkCard.module.scss
@@ -54,12 +54,20 @@ $padding-left-xs: 1em;
 
   img {
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: -1;
-    object-fit: cover;
-    width: 70%;
+    object-fit: contain;
+    height: 50%;
+    padding-right: 20px;
+    padding-left: 20px;
+    mask-image: linear-gradient(to bottom, transparent, rgb(75, 75, 75), transparent);
+    mask-size: 100% 100%;
+    filter: blur(1px); // Adjust the blur value as needed
+    box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.63); // Add shadow if you like
+    border-radius: 20px; // Adjust the value as needed
+    overflow: hidden;
   }
 
   .flex-initial {
