--- a/src/app/posts/[slug]/Article.module.scss
+++ b/src/app/posts/[slug]/Article.module.scss
@@ -5,54 +5,17 @@
 // Variables
 $btn-size: 60px;
 
-.articleNav {
+.updateStatus {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #f9f9f9;
-  height: $btn-size + 3px;
-  width: 100%;
-  border-radius: 40px;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  border: 1px solid #ececec;
-
-  @media screen and (max-width: 480px) {
-    height: $btn-size - 5px;
-    padding: 0 25px;
-  }
+  flex-direction: column;
 }
 
-.articleNavInfoArea {
-  display: flex;
-  gap: 6pt;
-  align-items: center;
+.updatedNew {
+  width: 50px;
   font-weight: bold;
-  color: #333;
-
-  @media screen and (max-width: 480px) {
-    font-size: 0.8rem;
-  }
-}
-
-.articleNavToggle {
-  width: 30px;
-  height: 30px;
-  pointer-events: none;
-
-  @media screen and (max-width: 480px) {
-    width: 20px;
-    height: 20px;
-  }
-}
-
-
-.articleNavIcon {
-  width: 15px;
-  height: 15px;
-  pointer-events: none;
+  text-align: center;
+  border-radius: 10px;
+  margin-bottom: 2px;
 }
 
 .navButton {
@@ -82,7 +45,7 @@ $btn-size: 60px;
 
 .heading {
   font-weight: bold;
-  font-size: 2.5rem;
+  font-size: 2.6rem;
   margin-bottom: 1em;
 }
 
