--- a/src/app/posts/[slug]/Article.module.scss
+++ b/src/app/posts/[slug]/Article.module.scss
@@ -8,39 +8,18 @@ $btn-size: 60px;
 .updateStatus {
   display: flex;
   flex-direction: column;
+
+  @media screen and (max-width: 1290px) {
+    margin-left: 60px;
+    margin-bottom: 15px;
+  }
 }
 
 .updatedNew {
   width: 50px;
   font-weight: bold;
-  text-align: center;
   border-radius: 10px;
   margin-bottom: 2px;
-}
-
-.navButton {
-  position: fixed;
-  top: 40px;
-  left: 50px;
-  background: rgb(223, 223, 223);
-  width: $btn-size;
-  height: $btn-size;
-  border-radius: 50%;
-  bottom: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  @include mixins.light-glass-bg;
-
-  @media screen and (max-width: 1290px) {
-    left: 10px;
-    bottom: 10px;
-  }
-}
-
-.navButtonIcon {
-  width: $btn-size - 40px;
-  height: $btn-size - 40px;
 }
 
 .heading {
@@ -69,8 +48,8 @@ $btn-size: 60px;
   }
 
   @media screen and (max-width: 480px) {
-    width: $btn-size - 7px;
-    height: $btn-size - 7px;
+    width: $btn-size - 15px;
+    height: $btn-size - 15px;
   }
 }
 
@@ -78,6 +57,11 @@ $btn-size: 60px;
   width: $btn-size - 40px;
   height: $btn-size - 40px;
   pointer-events: none;
+
+  @media screen and (max-width: 480px) {
+    width: $btn-size - 40px;
+    height: $btn-size - 40px;
+  }
 }
 
 .detail {
