--- a/src/components/Layout.module.scss
+++ b/src/components/Layout.module.scss
@@ -31,6 +31,10 @@
   @media screen and (max-width: 1290px) {
     margin-top: 120px;
   }
+
+  @media screen and (max-width: 600px) {
+    margin-top: 40px; 
+  }
 }
 
 .Row {
