--- a/src/views/NavigationPill.module.scss
+++ b/src/views/NavigationPill.module.scss
@@ -1,4 +1,8 @@
-.navigationPill {
+$brandFontSize: 1.5em;
+$linkSize: 40px;
+$linkMargin: 15px;
+
+.navPill {
   position: fixed;
   top: 20px;
   left: 50%;
