--- a/src/views/NavigationPill.module.scss
+++ b/src/views/NavigationPill.module.scss
@@ -14,6 +14,7 @@ $linkMargin: 15px;
   padding: 20px 40px;  /* Increase padding for a larger size */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* Slightly darker shadow for emphasis */
   z-index: 1000;
+  min-width: 900px;
 }
 
 .brand {
