--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,6 +3,30 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 8.5rem 6rem 6rem;
   min-height: 100vh;
+}
+
+.headCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+  border-radius: 15px;
+  background-color: #dd0000;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  width: 350px;
+  height: 350px;
+
+  .title,
+  .description {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .description {
+    font-size: 0.9rem;
+    color: #888888;
+  }
 }
