--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -5,6 +5,14 @@
   align-items: center;
   padding: 8.5rem 6rem 6rem;
   min-height: 100vh;
+
+  .row {
+    display: flex;
+    flex-direction: row;
+    background: green;
+    width: 100%;
+    gap: 20px;
+  }
 }
 
 .headCard {
