--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,5 @@
+@use "../styles/mixins";
+
 .main {
   display: flex;
   flex-direction: column;
@@ -9,10 +11,14 @@
   .row {
     display: flex;
     flex-direction: row;
-    background: green;
     width: 100%;
     gap: 20px;
   }
+}
+
+.container {
+  padding: 8.5rem 6rem 6rem;
+  background: gray;
 }
 
 .headCard {
@@ -22,9 +28,10 @@
   align-items: center;
   padding: 1.5rem;
   border-radius: 15px;
-  background-color: #dd0000;
+  background-color: #fff;
+  @include mixins.light-glass-bg;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  width: 350px;
+  width: 400px;
   height: 350px;
 
   .title,
