--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -10,3 +10,15 @@
       filter: none;
     }
   }
+
+  @mixin dark-glass-bg {
+    background: rgba(0, 0, 0, 0.75);
+    filter: drop-shadow(0 4px 10px rgba(56, 56, 56, 0.1));
+    backdrop-filter: blur(7.2px);
+    -webkit-backdrop-filter: blur(7.2px);
+    border: 1px solid rgba(0, 0, 0, 0.56);
+
+    &:hover {
+      filter: none;
+    }
+  }
