--- a/src/app/posts/[slug]/page.module.scss
+++ b/src/app/posts/[slug]/page.module.scss
@@ -173,3 +173,30 @@ $btn-size: 60px;
   font-weight: bold;
   font-size: 1.1rem;
 }
+.tocItem-h2 {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  font-size: 0.9rem;
+  font-weight: 500;
+  list-style-type: none; /* Remove list dot */
+
+  a {
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.tocItem-h3 {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  font-size: 0.8rem;
+  font-weight: 500;
+  margin-left: 1ch; /* Add one character indent */
+
+  a {
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
