--- a/src/views/NavigationStyle.module.scss
+++ b/src/views/NavigationStyle.module.scss
@@ -12,13 +12,23 @@ $linkMargin: 15px;
   display: flex;
   align-items: center;
   @include mixins.light-glass-bg;
-  border-radius: 50px; /* Increase border-radius for a more pill-like shape */
-
-  padding: 20px 40px;  /* Increase padding for a larger size */
+  border-radius: 50px;
+  padding: 20px 40px;
   z-index: 1000;
   min-width: 900px;
   height: 75px;
-  border: 1px solid rgb(229, 229, 229); /* Add a 1px border with #fbfbfb color */
+  border: 1px solid rgb(229, 229, 229);
+  transition: all 0.3s ease-in-out;
+
+  &.sticky {
+    top: 0;
+    border-radius: 0;
+    width: 100%;
+    min-width: 100%;
+    padding: 10px 20px;
+    height: 60px;
+    box-shadow: 0 2px 4px rgba(82, 82, 82, 0.1);
+  }
 
   @media screen and (max-width: 480px) {
     width: 90%;
@@ -27,13 +37,18 @@ $linkMargin: 15px;
 }
 
 .brand {
-  font-size: 1.4em; /* Increase font size for the brand */
+  font-size: 1.4em;
   font-weight: bold;
-  margin-right: 30px; /* Increase margin to space out the links */
+  margin-right: 30px;
+  transition: font-size 0.3s ease-in-out;
+
+  .sticky & {
+    font-size: 1.2em;
+  }
 
   @media screen and (max-width: 480px) {
-    font-size: 1.2em; /* Increase font size for the brand */
-    margin-right: 20px; /* Increase margin to space out the links */
+    font-size: 1.2em;
+    margin-right: 20px;
   }
 }
 
@@ -42,17 +57,23 @@ $linkMargin: 15px;
 }
 
 .link {
-  width: 40px;  /* Increase size of the links */
-  height: 40px; /* Increase size of the links */
+  width: 40px;
+  height: 40px;
   background-color: #ddd;
   border-radius: 50%;
-  margin-left: 15px; /* Increase margin for better spacing */
-  transition: background-color 0.3s;
+  margin-left: 15px;
+  transition: all 0.3s ease-in-out;
+
+  .sticky & {
+    width: 35px;
+    height: 35px;
+    margin-left: 10px;
+  }
 
   @media screen and (max-width: 480px) {
-    width: 30px;  /* Increase size of the links */
-    height: 30px; /* Increase size of the links */
-    margin-left: 10px; /* Increase margin for better spacing */
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
   }
 }
 
@@ -70,4 +91,10 @@ $linkMargin: 15px;
   @include mixins.dark-glass-bg;
   cursor: pointer;
   color: white;
+  transition: all 0.3s ease-in-out;
+
+  .sticky & {
+    width: 60px;
+    height: 35px;
+  }
 }
