--- a/src/app/posts/[slug]/page.module.scss
+++ b/src/app/posts/[slug]/page.module.scss
@@ -1,7 +1,10 @@
-
 @use "../../../styles/mixins";
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
+// Variables
+$btn-size: 60px;
+$primary-color: rgb(227, 111, 131);
+$border-color: rgb(229, 229, 229);
 
 .main {
   display: flex;
@@ -20,12 +23,10 @@
   }
 }
 
-// Variables
-$btn-size: 60px;
-
 .updateStatus {
   display: flex;
   flex-direction: column;
+  margin-bottom: 1rem;
 
   @media screen and (max-width: 1290px) {
     margin-left: 60px;
@@ -43,7 +44,7 @@ $btn-size: 60px;
 .heading {
   font-weight: bold;
   font-size: 3rem;
-  margin-bottom: 1em;
+  margin-bottom: 1.5rem;
   width: 100%;
 }
 
@@ -55,7 +56,6 @@ $btn-size: 60px;
   width: $btn-size;
   height: $btn-size;
   border-radius: 50%;
-  bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,69 +76,51 @@ $btn-size: 60px;
   width: $btn-size - 40px;
   height: $btn-size - 40px;
   pointer-events: none;
-
-  @media screen and (max-width: 480px) {
-    width: $btn-size - 40px;
-    height: $btn-size - 40px;
-  }
 }
 
 .detail {
-  & > h1 {
-    font-family: "Inter", sans-serif;
-    font-weight: bold;
-    font-size: 2.5rem;
+  font-family: "Inter", sans-serif;
+
+  h1, h2, h3 {
+    font-weight: 700;
+    margin-top: 1.5em;
+    margin-bottom: 0.5em;
   }
 
-  & > h2 {
-    font-family: "Inter", sans-serif;
-    font-weight: bold;
-    margin-top: 1em;
-    font-size: 2rem;
-  }
+  h1 { font-size: 2.5rem; }
+  h2 { font-size: 2rem; }
+  h3 { font-size: 1.7rem; }
 
-  & > h3 {
-    font-family: "Inter", sans-serif;
-    font-weight: bold;
-    font-size: 1.7rem;
-  }
-
-  & > p {
-    line-height: 1.8;
-    letter-spacing: 0.2px;
-    font-family: "Inter", sans-serif;
-    font-size: 1.2rem;
-    font-weight: 500;
-    line-height: 1.8rem;
-    margin-top: 0.5em;
-    margin-bottom: 2.5em;
-  }
-
-  & > ul {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    list-style: inside;
-    font-family: "Inter", sans-serif;
-    font-weight: 500;
+  p {
     font-size: 1.1rem;
-    line-height: 1.8rem;
+    font-weight: 400;
+    line-height: 1.6;
+    margin-bottom: 1em;
   }
 
-  & > figure {
-    padding-top: 10px;
-    padding-bottom: 10px;
+  ul {
+    margin: 1em 0;
+    padding-left: 1.5em;
+    list-style-type: disc;
+    font-size: 1.1rem;
+    line-height: 1.6;
+  }
+
+  figure {
+    margin: 1.5em 0;
     width: 100%;
 
     img {
       width: 100%;
       height: auto;
       border-radius: 10px;
-      object-fit:contain;
+      object-fit: contain;
     }
   }
 
-   a {
-    color: rgb(227, 111, 131);
+  a {
+    color: $primary-color;
+    text-decoration: none;
 
     &:hover {
       text-decoration: underline;
@@ -148,55 +130,49 @@ $btn-size: 60px;
 
 .tableOfContents {
   position: fixed;
+  top: 50%;
+  right: 50px;
+  transform: translateY(-50%);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  top: transformY(-50%);
-  right: 50px;
-  display: flex;
-  align-items: flex-start; /* Modify this line to align items to the left */
   @include mixins.light-glass-bg;
-  border-radius: 15px; /* Increase border-radius for a more pill-like shape */
-  padding: 30px 20px;  /* Increase padding for a larger size */
+  border-radius: 15px;
+  padding: 30px 20px;
   z-index: 1000;
   width: 200px;
-  min-height: 400px;
-  max-height: 80%;
-  border: 1px solid rgb(229, 229, 229); /* Add a 1px border with #fbfbfb color */
-  @media screen and (max-width: 480px) {
+  max-height: 80vh;
+  overflow-y: auto;
+  border: 1px solid $border-color;
+
+  @media screen and (max-width: 1290px) {
     display: none;
   }
 }
 
 .tableOfContentsHeading {
-  margin: 0;
-  font-weight: bold;
+  margin: 0 0 1em;
+  font-weight: 700;
   font-size: 1.1rem;
 }
-.tocItem-h2 {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  font-size: 0.9rem;
+
+.tocItem-h2, .tocItem-h3 {
+  margin: 0.5em 0;
   font-weight: 500;
-  list-style-type: none; /* Remove list dot */
+  list-style-type: none;
 
   a {
+    text-decoration: none;
+    color: inherit;
+
     &:hover {
       text-decoration: underline;
     }
   }
 }
 
+.tocItem-h2 { font-size: 0.9rem; }
 .tocItem-h3 {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
   font-size: 0.8rem;
-  font-weight: 500;
-  margin-left: 1ch; /* Add one character indent */
-
-  a {
-    &:hover {
-      text-decoration: underline;
-    }
-  }
+  margin-left: 1ch;
 }
