--- a/src/views/NavigationStyle.module.scss
+++ b/src/views/NavigationStyle.module.scss
@@ -1,30 +1,54 @@
 // NavigationBar.module.scss
+@use "../styles/mixins";
 
-$nav-bg-color: #ffffff; // 背景を白に変更
-$nav-text-color: #4a4a4a; // テキストの色をダークグレーに
-$nav-active-color: #ff6d99; // アクティブ状態の色を青に
-$nav-hover-color: #e0e0e0; // ホバー状態の色をライトグレーに
+$nav-bg-color: #ffffff; // Change background to white
+$nav-text-color: #4a4a4a; // Change text color to dark gray
+$nav-active-color: #ff8aad; // Change active state color to blue
+$nav-hover-color: #ffa9c3; // Change hover state color to light gray
 
 .navBarWrapper {
+  z-index: 1000;
+
+  display: flex;
+  justify-content: space-between;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   position: fixed;
+  margin-top: 30px;
+  width: 100%;
 
+  .navBrand {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: $nav-bg-color;
+    @include mixins.light-glass-bg;
+
+    padding: 8px 25px;
+    border-radius: 9999px;
+    position: relative;
+    width: 190px;
+    margin: 0 auto;
+    height: 70px;
+  }
 
   .navBar {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: $nav-bg-color;
-    padding: 8px 16px;
+    @include mixins.light-glass-bg;
+
+    padding: 8px 25px;
     border-radius: 9999px;
     position: relative;
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
     height: 70px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); // 軽いシャドウを追加
+    // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); // 軽いシャドウを追加
   }
 
   .tabContainer {
@@ -57,11 +81,12 @@ $nav-hover-color: #e0e0e0; // ホバー状態の色をライトグレーに
     font-weight: 500;
 
     &:hover {
-      background-color: $nav-hover-color;
+      // Temporary disable style
+      // background-color: $nav-hover-color;
     }
 
     &.active {
-      color: #ffffff; // アクティブなタブのテキストを白に
+      color: #ffffff; // Set the text color of the active tab to white
     }
   }
 
