--- a/src/app/posts/[slug]/page.module.scss
+++ b/src/app/posts/[slug]/page.module.scss
@@ -46,6 +46,10 @@ $border-color: rgb(229, 229, 229);
   font-size: 3rem;
   margin-bottom: 1.5rem;
   width: 100%;
+
+  @media screen and (max-width: 480px) {
+    font-size: 2rem;
+  }
 }
 
 .backButton {
