--- a/src/views/NavigationStyle.module.scss
+++ b/src/views/NavigationStyle.module.scss
@@ -33,6 +33,17 @@ $nav-hover-color: #ffa9c3; // Change hover state color to light gray
     margin: 0 auto;
     height: 70px;
 
+    a {
+      display: inline-flex;
+      align-items: center;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      object-fit: contain;
+    }
+
     @media screen and (max-width: 480px){
       display: none;
     }
