--- a/src/views/NavigationStyle.module.scss
+++ b/src/views/NavigationStyle.module.scss
@@ -10,26 +10,25 @@ $nav-hover-color: #ffa9c3; // Change hover state color to light gray
   z-index: 1000;
 
   display: flex;
-  justify-content: space-between;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   position: fixed;
+  margin: auto;
   margin-top: 30px;
   width: 100%;
 
   .navBrand {
+    position: absolute;
+    left: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-
-    background-color: $nav-bg-color;
-    @include mixins.light-glass-bg;
-
     padding: 8px 25px;
     border-radius: 9999px;
-    position: relative;
-    width: 190px;
     margin: 0 auto;
     height: 70px;
 
@@ -39,8 +38,8 @@ $nav-hover-color: #ffa9c3; // Change hover state color to light gray
     }
 
     img {
-      max-width: 100%;
-      height: auto;
+      height: 35px;
+      width: auto;
       object-fit: contain;
     }
 
@@ -50,6 +49,7 @@ $nav-hover-color: #ffa9c3; // Change hover state color to light gray
   }
 
   .navBar {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -58,7 +58,6 @@ $nav-hover-color: #ffa9c3; // Change hover state color to light gray
 
     padding: 8px 25px;
     border-radius: 9999px;
-    position: relative;
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
