--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,4 +1,5 @@
 @use "../styles/mixins";
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
 .main {
   display: flex;
@@ -55,6 +56,11 @@
   border-radius: 15px;
   width: 100%;
   height: auto;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  vertical-align: middle;
 
   .boldTypo {
     font-size: 10rem;
@@ -78,6 +84,19 @@
     background-clip: text;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
+  }
+
+  .sentence1 {
+    font-size: 5rem;
+    font-weight: bold;
+    background: -webkit-linear-gradient(#3b4fff, #c037ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background: linear-gradient(#3b4fff, #c037ff);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
+    padding-top: 30px;
   }
 
   @media screen and (max-width: 1350px) {
